adds some changes

--- a/index.html
+++ b/index.html
@@ -13,49 +13,51 @@
     <header class="header">
 
         <div class="container">
-            <nav class="header-nav">
-                <a class="logo" href="https://keshlak.github.io/goit-markup-hw-07/"><span
-                        class="logo-accent">Web</span>Studio</a>
+            <div class="header-container">
+                <nav class="header-nav">
+                    <a class="logo" href="https://keshlak.github.io/goit-markup-hw-07/"><span
+                            class="logo-accent">Web</span>Studio</a>
 
-                <button type="button" class="menu-button is-open" data-menu-button aria-expanded="false">
-                    <svg width="40px" height="40px">
-                        <use class="icon-menu" href="./images/svg/symbol-defs.svg#menu"></use>
-                        <use class="icon-cross" href="./images/svg/symbol-defs.svg#close"></use>
-                    </svg>
-                </button>
+                    <button type="button" class="menu-button is-open" data-menu-button aria-expanded="false">
+                        <svg width="40px" height="40px">
+                            <use class="icon-menu" href="./images/svg/symbol-defs.svg#menu"></use>
+                            <use class="icon-cross" href="./images/svg/symbol-defs.svg#close"></use>
+                        </svg>
+                    </button>
 
-            </nav>
+                </nav>
 
-            <!-- Contacts -->
+                <!-- Contacts -->
 
 
-            <div class="menu-container" data-menu>
-                <ul class="nav">
-                    <li class="item"><a class="link current" href="./index.html">Студия </a></li>
-                    <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
-                    <li class="item"><a class="link" href="">Контакты</a></li>
-                </ul>
-                <ul class="contact">
-                    <li class="item">
-                        <a class="link" href="mailto:info@devstudio.com">
-                            <svg class="mail" width="16px" height="12px">
-                                <use href="./images/svg/symbol-defs.svg#mail">
+                <div class="menu-container" data-menu>
+                    <ul class="nav">
+                        <li class="item"><a class="link current" href="./index.html">Студия </a></li>
+                        <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
+                        <li class="item"><a class="link" href="">Контакты</a></li>
+                    </ul>
+                    <ul class="contact">
+                        <li class="item">
+                            <a class="link" href="mailto:info@devstudio.com">
+                                <svg class="mail" width="16px" height="12px">
+                                    <use href="./images/svg/symbol-defs.svg#mail">
 
+                                    </use>
+                                </svg>
+                                info@devstudio.com
+                            </a>
+                        </li>
+                        <li class="item">
+                            <a class="link" href="tel:+380961111111">
+                                <svg class="phone" width="10px" height="16px">
+                                    <use href="./images/svg/symbol-defs.svg#smartphone">
+                                </svg>
                                 </use>
-                            </svg>
-                            info@devstudio.com
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a class="link" href="tel:+380961111111">
-                            <svg class="phone" width="10px" height="16px">
-                                <use href="./images/svg/symbol-defs.svg#smartphone">
-                            </svg>
-                            </use>
-                            +38 096 111 11 11
-                        </a>
-                    </li>
-                </ul>
+                                +38 096 111 11 11
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </header>
@@ -301,42 +303,42 @@
                 <ul class="client-list">
                     <li class="item">
                         <a class="client-link" href="">
-                            <svg>
+                            <svg width="50" height="45">
                                 <use href="./images/svg/symbol-defs.svg#logo1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a class="client-link" href="">
-                            <svg>
+                            <svg width="40" height="52">
                                 <use href="./images/svg/symbol-defs.svg#logo2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a class="client-link" href="">
-                            <svg>
+                            <svg width="41" height="43">
                                 <use href="./images/svg/symbol-defs.svg#logo3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a class="client-link" href="">
-                            <svg>
+                            <svg width="80" height="42">
                                 <use href="./images/svg/symbol-defs.svg#logo4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a class="client-link" href="">
-                            <svg>
+                            <svg width="5590" height="47">
                                 <use href="./images/svg/symbol-defs.svg#logo5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a class="client-link" href="">
-                            <svg>
+                            <svg width="89" height="46">
                                 <use href="./images/svg/symbol-defs.svg#logo6"></use>
                             </svg>
                         </a>
