adds responsive html+css

--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
         <div class="container">
             <div class="header-container">
                 <nav class="header-nav">
-                    <a class="logo" href="https://keshlak.github.io/goit-markup-hw-07/"><span
+                    <a class="logo" href="https://keshlak.github.io/goit-markup-hw-08/"><span
                             class="logo-accent">Web</span>Studio</a>
 
-                    <button type="button" class="menu-button is-open" data-menu-button aria-expanded="false">
-                        <svg width="40px" height="40px">
-                            <use class="icon-menu" href="./images/svg/symbol-defs.svg#menu"></use>
-                            <use class="icon-cross" href="./images/svg/symbol-defs.svg#close"></use>
-                        </svg>
-                    </button>
+
 
                 </nav>
+                <button type="button" class="menu-button is-open" data-menu-button aria-expanded="false">
+                    <svg width="40px" height="40px">
+                        <use class="icon-menu" href="./images/svg/symbol-defs.svg#menu"></use>
+                        <use class="icon-cross" href="./images/svg/symbol-defs.svg#close"></use>
+                    </svg>
+                </button>
 
                 <!-- Contacts -->
 
@@ -349,65 +350,68 @@
 
     </main>
     <footer class="footer">
-        <div class="container footer-info">
+        <div class="container">
+            <div class="footer-info">
+                <div class="footer-links">
+                    <a class="logo" href="https://keshlak.github.io/goit-markup-hw-08/"><span
+                            class="logo-accent">Web</span>Studio</a>
+                    <address class="adress contact">
+                        <ul class="contact-list">
+                            <li class="item">
+                                <a class="adress-link"
+                                    href="https://www.google.com/maps/d/viewer?msa=0&mid=10uSM3H-mIU3GznYo2szRIEphczw&ll=50.42732700000001%2C30.538092&z=17"
+                                    target="blanc">г.
+                                    Киев, пр-т Леси Украинки, 26</a>
+                            </li>
+                            <li class="item">
+                                <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
 
-            <div class="footer-links">
-                <a class="logo" href="https://keshlak.github.io/goit-markup-hw-07/"><span
-                        class="logo-accent">Web</span>Studio</a>
-                <address class="adress contact">
-                    <ul class="contact-list">
-                        <li class="item">
-                            <a class="adress-link"
-                                href="https://www.google.com/maps/d/viewer?msa=0&mid=10uSM3H-mIU3GznYo2szRIEphczw&ll=50.42732700000001%2C30.538092&z=17"
-                                target="blanc">г.
-                                Киев, пр-т Леси Украинки, 26</a>
+                            </li>
+                            <li class="item">
+                                <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+                            </li>
+                        </ul>
+                    </address>
+                </div>
+                <div class="footer-social">
+                    <h3>Присоединяйтесь</h3>
+                    <ul class="social">
+                        <li class="social-item"><a href="">
+                                <svg width="20px" height="20px">
+                                    <use href="./images/svg/symbol-defs.svg#instagram"></use>
+                                </svg></a>
                         </li>
-                        <li class="item">
-                            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-
+                        <li class="social-item"><a href="">
+                                <svg width="20px" height="20px">
+                                    <use href="./images/svg/symbol-defs.svg#twitter"></use>
+                                </svg></a>
                         </li>
-                        <li class="item">
-                            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+                        <li class="social-item"><a href="">
+                                <svg width="20px" height="20px">
+                                    <use href="./images/svg/symbol-defs.svg#facebook"></use>
+                                </svg></a>
+                        </li>
+                        <li class="social-item"><a href="">
+                                <svg width="20px" height="20px">
+                                    <use href="./images/svg/symbol-defs.svg#linkedin"></use>
+                                </svg></a>
                         </li>
                     </ul>
-                </address>
+                </div>
+                <div class="footer-subscribe">
+                    <h3>
+                        Подпишитесь на рассылку
+                    </h3>
+                    <form class="subscribe-form" action="">
+                        <input class="subscribe-input" type="mail" name="subscribe" placeholder="E-mail" required>
+                        <button class="subscribe-button" type="submit">
+                            Подписаться
+                        </button>
+                    </form>
+                </div>
             </div>
-            <div class="footer-social">
-                <h3>Присоединяйтесь</h3>
-                <ul class="social">
-                    <li class="social-item"><a href="">
-                            <svg width="20px" height="20px">
-                                <use href="./images/svg/symbol-defs.svg#instagram"></use>
-                            </svg></a>
-                    </li>
-                    <li class="social-item"><a href="">
-                            <svg width="20px" height="20px">
-                                <use href="./images/svg/symbol-defs.svg#twitter"></use>
-                            </svg></a>
-                    </li>
-                    <li class="social-item"><a href="">
-                            <svg width="20px" height="20px">
-                                <use href="./images/svg/symbol-defs.svg#facebook"></use>
-                            </svg></a>
-                    </li>
-                    <li class="social-item"><a href="">
-                            <svg width="20px" height="20px">
-                                <use href="./images/svg/symbol-defs.svg#linkedin"></use>
-                            </svg></a>
-                    </li>
-                </ul>
-            </div>
-            <div class="footer-subscribe">
-                <h3>
-                    Подпишитесь на рассылку
-                </h3>
-                <form class="subscribe-form" action="">
-                    <input class="subscribe-input" type="mail" name="subscribe" placeholder="E-mail" required>
-                    <button class="subscribe-button" type="submit">
-                        Подписаться
-                    </button>
-                </form>
-            </div>
+
+
         </div>
     </footer>
     <div class="backdrop is-hidden container" data-backdrop>
