--- a/portfolio.html
+++ b/portfolio.html
@@ -13,10 +13,14 @@
     <header class="header">
 
         <div class="container">
-            <nav class="header-nav">
-                <a class="logo" href="https://keshlak.github.io/goit-markup-hw-07/"><span
-                        class="logo-accent">Web</span>Studio</a>
+            <div class="header-container">
+                <nav class="header-nav">
+                    <a class="logo" href="https://keshlak.github.io/goit-markup-hw-08/"><span
+                            class="logo-accent">Web</span>Studio</a>
 
+
+
+                </nav>
                 <button type="button" class="menu-button is-open" data-menu-button aria-expanded="false">
                     <svg width="40px" height="40px">
                         <use class="icon-menu" href="./images/svg/symbol-defs.svg#menu"></use>
@@ -24,38 +28,37 @@
                     </svg>
                 </button>
 
-            </nav>
-
-            <!-- Contacts -->
+                <!-- Contacts -->
 
 
-            <div class="menu-container" data-menu>
-                <ul class="nav">
-                    <li class="item"><a class="link" href="./index.html">Студия </a></li>
-                    <li class="item"><a class="link current" href="./portfolio.html">Портфолио</a></li>
-                    <li class="item"><a class="link" href="">Контакты</a></li>
-                </ul>
-                <ul class="contact">
-                    <li class="item">
-                        <a class="link" href="mailto:info@devstudio.com">
-                            <svg class="mail" width="16px" height="12px">
-                                <use href="./images/svg/symbol-defs.svg#mail">
+                <div class="menu-container" data-menu>
+                    <ul class="nav">
+                        <li class="item"><a class="link" href="./index.html">Студия </a></li>
+                        <li class="item"><a class="link current" href="./portfolio.html">Портфолио</a></li>
+                        <li class="item"><a class="link" href="">Контакты</a></li>
+                    </ul>
+                    <ul class="contact">
+                        <li class="item">
+                            <a class="link" href="mailto:info@devstudio.com">
+                                <svg class="mail" width="16px" height="12px">
+                                    <use href="./images/svg/symbol-defs.svg#mail">
 
+                                    </use>
+                                </svg>
+                                info@devstudio.com
+                            </a>
+                        </li>
+                        <li class="item">
+                            <a class="link" href="tel:+380961111111">
+                                <svg class="phone" width="10px" height="16px">
+                                    <use href="./images/svg/symbol-defs.svg#smartphone">
+                                </svg>
                                 </use>
-                            </svg>
-                            info@devstudio.com
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a class="link" href="tel:+380961111111">
-                            <svg class="phone" width="10px" height="16px">
-                                <use href="./images/svg/symbol-defs.svg#smartphone">
-                            </svg>
-                            </use>
-                            +38 096 111 11 11
-                        </a>
-                    </li>
-                </ul>
+                                +38 096 111 11 11
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </header>
@@ -263,65 +266,68 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container footer-info">
+        <div class="container">
+            <div class="footer-info">
+                <div class="footer-links">
+                    <a class="logo" href="https://keshlak.github.io/goit-markup-hw-08/"><span
+                            class="logo-accent">Web</span>Studio</a>
+                    <address class="adress contact">
+                        <ul class="contact-list">
+                            <li class="item">
+                                <a class="adress-link"
+                                    href="https://www.google.com/maps/d/viewer?msa=0&mid=10uSM3H-mIU3GznYo2szRIEphczw&ll=50.42732700000001%2C30.538092&z=17"
+                                    target="blanc">г.
+                                    Киев, пр-т Леси Украинки, 26</a>
+                            </li>
+                            <li class="item">
+                                <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
 
-            <div class="footer-links">
-                <a class="logo" href="https://keshlak.github.io/goit-markup-hw-07/"><span
-                        class="logo-accent">Web</span>Studio</a>
-                <address class="adress contact">
-                    <ul class="contact-list">
-                        <li class="item">
-                            <a class="adress-link"
-                                href="https://www.google.com/maps/d/viewer?msa=0&mid=10uSM3H-mIU3GznYo2szRIEphczw&ll=50.42732700000001%2C30.538092&z=17"
-                                target="blanc">г.
-                                Киев, пр-т Леси Украинки, 26</a>
+                            </li>
+                            <li class="item">
+                                <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+                            </li>
+                        </ul>
+                    </address>
+                </div>
+                <div class="footer-social">
+                    <h3>Присоединяйтесь</h3>
+                    <ul class="social">
+                        <li class="social-item"><a href="">
+                                <svg width="20px" height="20px">
+                                    <use href="./images/svg/symbol-defs.svg#instagram"></use>
+                                </svg></a>
                         </li>
-                        <li class="item">
-                            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-
+                        <li class="social-item"><a href="">
+                                <svg width="20px" height="20px">
+                                    <use href="./images/svg/symbol-defs.svg#twitter"></use>
+                                </svg></a>
                         </li>
-                        <li class="item">
-                            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+                        <li class="social-item"><a href="">
+                                <svg width="20px" height="20px">
+                                    <use href="./images/svg/symbol-defs.svg#facebook"></use>
+                                </svg></a>
+                        </li>
+                        <li class="social-item"><a href="">
+                                <svg width="20px" height="20px">
+                                    <use href="./images/svg/symbol-defs.svg#linkedin"></use>
+                                </svg></a>
                         </li>
                     </ul>
-                </address>
+                </div>
+                <div class="footer-subscribe">
+                    <h3>
+                        Подпишитесь на рассылку
+                    </h3>
+                    <form class="subscribe-form" action="">
+                        <input class="subscribe-input" type="mail" name="subscribe" placeholder="E-mail" required>
+                        <button class="subscribe-button" type="submit">
+                            Подписаться
+                        </button>
+                    </form>
+                </div>
             </div>
-            <div class="footer-social">
-                <h3>Присоединяйтесь</h3>
-                <ul class="social">
-                    <li class="social-item"><a href="">
-                            <svg width="20px" height="20px">
-                                <use href="./images/svg/symbol-defs.svg#instagram"></use>
-                            </svg></a>
-                    </li>
-                    <li class="social-item"><a href="">
-                            <svg width="20px" height="20px">
-                                <use href="./images/svg/symbol-defs.svg#twitter"></use>
-                            </svg></a>
-                    </li>
-                    <li class="social-item"><a href="">
-                            <svg width="20px" height="20px" g>
-                                <use href="./images/svg/symbol-defs.svg#facebook"></use>
-                            </svg></a>
-                    </li>
-                    <li class="social-item"><a href="">
-                            <svg width="20px" height="20px">
-                                <use href="./images/svg/symbol-defs.svg#linkedin"></use>
-                            </svg></a>
-                    </li>
-                </ul>
-            </div>
-            <div class="footer-subscribe">
-                <h3>
-                    Подпишитесь на рассылку
-                </h3>
-                <form class="subscribe-form" action="">
-                    <input class="subscribe-input" type="mail" name="subscribe" placeholder="E-mail" required>
-                    <button class="subscribe-button" type="submit">
-                        Подписаться
-                    </button>
-                </form>
-            </div>
+
+
         </div>
     </footer>
     <script src="./js/menu.js"></script>
