adds adaptive images

--- a/index.html
+++ b/index.html
@@ -123,20 +123,26 @@
                     Чем мы занимаемся
                 </h2>
                 <ul class="our-work-photo">
-                    <li class="link"><a href=""><img class="our-work-img" src="images/img1.jpg"
-                                alt="Разработка десктопных версий" width="370px"></a>
+                    <li class="link">
+                        <a href="">
+                            <img srcset="/images/img1.jpg 1x, /images/img1@2.jpg 2x" class="our-work-img"
+                                src="images/img1.jpg" alt="Разработка десктопных версий" width="370px">
+                        </a>
                         <p class="item">
                             Десктопные приложения
                         </p>
                     </li>
-                    <li class="link"><a href=""><img class="our-work-img" src="images/img2.jpg"
-                                alt="Разработка мобильных версий" width="370px"></a>
+                    <li class="link">
+                        <a href="">
+                            <img srcset="/images/img2.jpg 1x, /images/img2@2.jpg 2x" class="our-work-img"
+                                src="images/img2.jpg" alt="Разработка мобильных версий" width="370px"></a>
                         <p class="item">
                             Мобильные приложения
                         </p>
                     </li>
-                    <li class="link"><a href=""><img class="our-work-img" src="images/img3.jpg"
-                                alt="Разработка таблетных версий" width="370px"></a>
+                    <li class="link"><a href=""><img srcset="/images/img3.jpg 1x, /images/img3@2.jpg 2x"
+                                class="our-work-img" src="images/img3.jpg" alt="Разработка таблетных версий"
+                                width="370px"></a>
                         <p class="item">
                             Дизайнерские решения
                         </p>
@@ -154,7 +160,10 @@
                 </h2>
                 <ul class="team-members">
                     <li class="item">
-                        <img src="images/Demianenko.jpg" alt="Игорь Демьяненко">
+                        <img 
+                        srcset="/images/Demianenko.jpg 1x, /images/Demianenko@2.jpg 2x" 
+                        src="images/Demianenko.jpg"
+                        alt="Игорь Демьяненко">
                         <div class="member-about">
                             <h3 class="member-about-header">
                                 Игорь Демьяненко
@@ -188,7 +197,11 @@
 
                     </li>
                     <li class="item">
-                        <img src="images/Repina.jpg" alt="Ольга Репина">
+                        <img 
+                        srcset="/images/Repina.jpg 1x, 
+                                /images/Repina@2.jpg 2x" 
+                        src="images/Repina.jpg"
+                        alt="Ольга Репина">
                         <div class="member-about">
                             <h3 class="member-about-header">
                                 Ольга Репина
@@ -197,7 +210,9 @@
                                 Frontend Developer
                             </p>
                             <ul class="social">
-                                <li class="social-item"><a href="">
+                                <li 
+                                class="social-item">
+                                    <a href="">
                                         <svg width="20px" height="20px">
                                             <use href="./images/svg/symbol-defs.svg#instagram"></use>
                                         </svg></a>
@@ -223,7 +238,9 @@
 
                     </li>
                     <li class="item">
-                        <img src="images/Tarasov.jpg" alt="Николай Тарасов">
+                        <img srcset="/images/Tarasov.jpg 1x, /images/Tarasov@2.jpg 2x" src="images/Tarasov.jpg"
+                            alt="Николай Тарасов"
+>
                         <div class="member-about">
                             <h3 class="member-about-header">
                                 Николай Тарасов
@@ -258,7 +275,9 @@
 
                     </li>
                     <li class="item">
-                        <img src="images/Yermakov.jpg" alt="Михаил Ермаков">
+                        <img srcset="/images/Yermakov.jpg 1x, /images/Yermakov@2.jpg 2x" src="images/Yermakov.jpg"
+                            alt="Михаил Ермаков"
+>
                         <div class="member-about">
                             <h3 class="member-about-header">
                                 Михаил Ермаков
