updates images path in html

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                 <ul class="our-work-photo">
                     <li class="link">
                         <a href="">
-                            <img srcset="/images/img1.jpg 1x, /images/img1@2.jpg 2x" class="our-work-img"
-                                src="images/img1.jpg" alt="Разработка десктопных версий" width="370px">
+                            <img srcset="./images/img1.jpg 1x, ./images/img1@2.jpg 2x" class="our-work-img"
+                                src="./images/img1.jpg" alt="Разработка десктопных версий" width="370px">
                         </a>
                         <p class="item">
                             Десктопные приложения
@@ -134,14 +134,14 @@
                     </li>
                     <li class="link">
                         <a href="">
-                            <img srcset="/images/img2.jpg 1x, /images/img2@2.jpg 2x" class="our-work-img"
-                                src="images/img2.jpg" alt="Разработка мобильных версий" width="370px"></a>
+                            <img srcset="./images/img2.jpg 1x, ./images/img2@2.jpg 2x" class="our-work-img"
+                                src="./images/img2.jpg" alt="Разработка мобильных версий" width="370px"></a>
                         <p class="item">
                             Мобильные приложения
                         </p>
                     </li>
-                    <li class="link"><a href=""><img srcset="/images/img3.jpg 1x, /images/img3@2.jpg 2x"
-                                class="our-work-img" src="images/img3.jpg" alt="Разработка таблетных версий"
+                    <li class="link"><a href=""><img srcset="./images/img3.jpg 1x, ./images/img3@2.jpg 2x"
+                                class="our-work-img" src="./images/img3.jpg" alt="Разработка таблетных версий"
                                 width="370px"></a>
                         <p class="item">
                             Дизайнерские решения
@@ -161,8 +161,8 @@
                 <ul class="team-members">
                     <li class="item">
                         <img 
-                        srcset="/images/Demianenko.jpg 1x, /images/Demianenko@2.jpg 2x" 
-                        src="images/Demianenko.jpg"
+                        srcset="./images/Demianenko.jpg 1x, ./images/Demianenko@2.jpg 2x" 
+                        src="./images/Demianenko.jpg"
                         alt="Игорь Демьяненко">
                         <div class="member-about">
                             <h3 class="member-about-header">
@@ -198,9 +198,9 @@
                     </li>
                     <li class="item">
                         <img 
-                        srcset="/images/Repina.jpg 1x, 
-                                /images/Repina@2.jpg 2x" 
-                        src="images/Repina.jpg"
+                        srcset="./images/Repina.jpg 1x, 
+                                ./images/Repina@2.jpg 2x" 
+                        src="./images/Repina.jpg"
                         alt="Ольга Репина">
                         <div class="member-about">
                             <h3 class="member-about-header">
@@ -238,7 +238,7 @@
 
                     </li>
                     <li class="item">
-                        <img srcset="/images/Tarasov.jpg 1x, /images/Tarasov@2.jpg 2x" src="images/Tarasov.jpg"
+                        <img srcset="./images/Tarasov.jpg 1x, ./images/Tarasov@2.jpg 2x" src="./images/Tarasov.jpg"
                             alt="Николай Тарасов"
 >
                         <div class="member-about">
@@ -275,7 +275,7 @@
 
                     </li>
                     <li class="item">
-                        <img srcset="/images/Yermakov.jpg 1x, /images/Yermakov@2.jpg 2x" src="images/Yermakov.jpg"
+                        <img srcset="./images/Yermakov.jpg 1x, ./images/Yermakov@2.jpg 2x" src="./images/Yermakov.jpg"
                             alt="Михаил Ермаков"
 >
                         <div class="member-about">
