--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,9 @@
                                 Технокряк это современная площадка распространения коронавируса. Компании используют
                                 эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                             </p>
-                            <img class="card-img" src="./images/project1.jpg" alt="Технокряк">
+                            <img class="card-img" 
+                                 srcset="./images/project1.jpg 1x, ./images/project1@2.jpg 2x" class="our-work-img"
+                                 src="./images/project1.jpg" alt="Технокряк">
                         </div>
 
                         <div class="card-bottom">
@@ -100,7 +102,7 @@
                                 Технокряк это современная площадка распространения коронавируса. Компании используют
                                 эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                             </p>
-                            <img class="card-img" src="./images/project2.jpg" alt="Постер New Orlean vs Golden Star">
+                            <img class="card-img" srcset="./images/project2.jpg 1x, ./images/project2@2.jpg 2x" src="./images/project2.jpg" alt="Постер New Orlean vs Golden Star">
                         </div>
 
                         <div class="card-bottom">
@@ -121,7 +123,7 @@
                                 Технокряк это современная площадка распространения коронавируса. Компании используют
                                 эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                             </p>
-                            <img class="card-img" src="./images/project3.jpg" alt="Ресторан Seafood">
+                            <img class="card-img" srcset="./images/project3.jpg 1x, ./images/project3@2.jpg 2x" src="./images/project3.jpg" alt="Ресторан Seafood">
 
                         </div>
                         <div class="card-bottom">
@@ -142,7 +144,7 @@
                                 Технокряк это современная площадка распространения коронавируса. Компании используют
                                 эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                             </p>
-                            <img class="card-img" src="./images/project4.jpg" alt="Проект Prime">
+                            <img class="card-img" srcset="./images/project4.jpg 1x, ./images/project4@2.jpg 2x" src="./images/project4.jpg" alt="Проект Prime">
 
                         </div>
                         <div class="card-bottom">
@@ -163,7 +165,7 @@
                                 Технокряк это современная площадка распространения коронавируса. Компании используют
                                 эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                             </p>
-                            <img class="card-img" src="./images/project5.jpg" alt="Проект Boxes">
+                            <img class="card-img" srcset="./images/project5.jpg 1x, ./images/project5@2.jpg 2x" src="./images/project5.jpg" alt="Проект Boxes">
 
                         </div>
                         <div class="card-bottom">
@@ -184,7 +186,7 @@
                                 Технокряк это современная площадка распространения коронавируса. Компании используют
                                 эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                             </p>
-                            <img class="card-img" src="./images/project6.jpg" alt="Inspiration has no Borders">
+                            <img class="card-img" srcset="./images/project6.jpg 1x, ./images/project6@2.jpg 2x" src="./images/project6.jpg" alt="Inspiration has no Borders">
 
                         </div>
                         <div class="card-bottom">
@@ -205,7 +207,7 @@
                                 Технокряк это современная площадка распространения коронавируса. Компании используют
                                 эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                             </p>
-                            <img class="card-img" src="./images/project7.jpg" alt="Издание Limited Edition">
+                            <img class="card-img" srcset="./images/project7.jpg 1x, ./images/project7@2.jpg 2x" src="./images/project7.jpg" alt="Издание Limited Edition">
 
                         </div>
                         <div class="card-bottom">
@@ -226,7 +228,7 @@
                                 Технокряк это современная площадка распространения коронавируса. Компании используют
                                 эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                             </p>
-                            <img class="card-img" src="./images/project8.jpg" alt="Проект LAB">
+                            <img class="card-img" srcset="./images/project8.jpg 1x, ./images/project8@2.jpg 2x" src="./images/project8.jpg" alt="Проект LAB">
 
                         </div>
                         <div class="card-bottom">
@@ -247,7 +249,7 @@
                                 Технокряк это современная площадка распространения коронавируса. Компании используют
                                 эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                             </p>
-                            <img class="card-img" src="./images/project9.jpg" alt="Growing Business">
+                            <img class="card-img" srcset="./images/project9.jpg 1x, ./images/project9@2.jpg 2x" src="./images/project9.jpg" alt="Growing Business">
 
                         </div>
                         <div class="card-bottom">
